--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: tsdo
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Title: data objects in takewiki solutions
+Version: 0.1.1
+Author: hulilei
+Maintainer: hulilei <hulilei@takewiki.com.cn>
+Description: data objects in takewiki solitions 
+    don't including the object in the tsdt and tsda mainly this package
+    in charge of transforming and re-constructure
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
 Collate: 
+    '01-data_frame.R'
     'decimal2Hex_color.R'
     'CMYK.R'
     'CMYK2RGB.R'
@@ -27,5 +29,8 @@ Collate:
     'rowColEx.R'
     'salesOrderHead.R'
     'setAs.R'
+    'tsdo.R'
     'value_if_na.R'
     'zzz.R'
+Suggests: 
+    testthat
