delete the tsdo.R file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CMYK2RGB)
 export(RGB2CMYK)
 export(RGB2Hex)
 export(addrPhoneExtractor)
+export(df_columnName)
 export(df_columnType)
 export(is.odd)
 export(is_all_true)
