add the df_mergeColumn into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(RGB2Hex)
 export(addrPhoneExtractor)
 export(df_columnName)
 export(df_columnType)
+export(df_mergeColumn)
 export(is.odd)
 export(is_all_true)
 export(numUpperCase)
