--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(CMYK)
 export(CMYK2RGB)
 export(RGB2CMYK)
 export(RGB2Hex)
+export(R_exec)
+export(R_expr)
 export(addrPhoneExtractor)
 export(df_columnName)
 export(df_columnType)
