re-constructure the tsdo file structure.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,23 +19,10 @@ Collate:
     '01-vec_numeric.R'
     '02-list.R'
     '03-data_frame.R'
-    'decimal2Hex_color.R'
-    'CMYK.R'
-    'CMYK2RGB.R'
-    'FDate.R'
-    'FInterId.R'
-    'FName.R'
-    'FNumber.R'
-    'RGB2CMYK.R'
-    'addrPhoneExtractor.R'
-    'hello.R'
-    'is.odd.R'
-    'is_all_true.R'
-    'numUpperCase.R'
-    'rowColEx.R'
-    'salesOrderHead.R'
-    'setAs.R'
-    'value_if_na.R'
+    '03-df_summaise_tableLevel.R'
+    '03-df_summaise_groupLevel.R'
+    '04-tbl.R'
+    '11-color.R'
     'zzz.R'
 Suggests: 
     testthat
