update the package.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,9 @@ Collate:
     '03-data_frame.R'
     '03-df_summaise_tableLevel.R'
     '03-df_summaise_groupLevel.R'
+    '03-df_detail_groupLevel.R'
+    '03-df_setsOpers.R'
+    '03-df_joinOpers.R'
     '04-tbl.R'
     '11-color.R'
     'zzz.R'
