add the filter into data.frame.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,13 @@ export(RGB2Hex)
 export(R_exec)
 export(R_expr)
 export(addrPhoneExtractor)
+export(comboLogi_to_rs)
+export(df_antiJoin_bySameColNames)
 export(df_col2sqlFieldString)
 export(df_columnName)
 export(df_columnType)
 export(df_count)
+export(df_filter)
 export(df_fullJoin_byDiffColNames)
 export(df_fullJoin_bySameColNames)
 export(df_groupBy_summarise_cols_funs)
@@ -30,6 +33,7 @@ export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
 export(df_summarise_cols_oneFun)
 export(df_union)
+export(equal_to_rs)
 export(getPhoneNumber)
 export(ifnull)
 export(is.odd)
