--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Collate:
     '03-df_detail_groupLevel.R'
     '03-df_setsOpers.R'
     '03-df_joinOpers.R'
+    '03-df_rowOpers.R'
     '04-tbl.R'
     '11-color.R'
     'zzz.R'
