--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(df_orderData)
 export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
 export(df_rowColEx)
+export(df_selectCol)
 export(df_setdiff)
 export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
