--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,9 @@ export(df_summarise_cols_oneFun)
 export(df_union)
 export(equal_to_rs)
 export(getPhoneNumber)
+export(hms)
 export(ifnull)
+export(is.Am)
 export(is.odd)
 export(is_all_true)
 export(left)
@@ -50,5 +52,6 @@ export(subsetStr)
 export(tbl_as_df)
 export(value_if_na)
 import(dplyr)
+import(hms)
 import(readxl)
 import(stringr)
