add the is.Night func into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,8 @@ export(getPhoneNumber)
 export(hms)
 export(ifnull)
 export(is.Am)
+export(is.Night)
+export(is.Pm)
 export(is.odd)
 export(is_all_true)
 export(left)
