--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(right)
 export(splitStr)
 export(subsetStr)
 export(tbl_as_df)
+export(timeDiff)
 export(value_if_na)
 import(dplyr)
 import(hms)
