add the function into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,10 @@ export(RGB2Hex)
 export(R_exec)
 export(R_expr)
 export(addrPhoneExtractor)
+export(as.date)
+export(as.datetime)
 export(comboLogi_to_rs)
+export(datetime_diff)
 export(df_antiJoin_bySameColNames)
 export(df_col2sqlFieldString)
 export(df_columnName)
@@ -43,6 +46,8 @@ export(is.Am)
 export(is.Morning)
 export(is.Night)
 export(is.Pm)
+export(is.date)
+export(is.datetime)
 export(is.odd)
 export(is_all_true)
 export(left)
