update the files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(addrPhoneExtractor)
 export(as.date)
 export(as.datetime)
 export(comboLogi_to_rs)
+export(date_diff)
 export(datetime_diff)
 export(df_antiJoin_bySameColNames)
 export(df_col2sqlFieldString)
