--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(numUpperCase)
 export(replaceStr)
 export(right)
 export(splitStr)
+export(str_contain)
 export(subsetStr)
 export(tbl_as_df)
 export(timeDiff)
