--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(replaceStr)
 export(right)
 export(splitStr)
 export(str_contain)
+export(str_copyPrevRow)
 export(subsetStr)
 export(tbl_as_df)
 export(timeDiff)
