update the packages tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,9 @@ export(right)
 export(splitStr)
 export(str_contain)
 export(str_copyPrevRow)
+export(str_splitByLeftBrace)
+export(str_splitByRighttBrace)
+export(str_splitCols)
 export(subsetStr)
 export(tbl_as_df)
 export(timeDiff)
