add the str_equal into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,8 @@ export(right)
 export(splitStr)
 export(str_contain)
 export(str_copyPrevRow)
+export(str_equal)
+export(str_equals)
 export(str_splitByLeftBrace)
 export(str_splitByRighttBrace)
 export(str_splitCols)
