add the str_contains into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(replaceStr)
 export(right)
 export(splitStr)
 export(str_contain)
+export(str_contains)
 export(str_copyPrevRow)
 export(str_equal)
 export(str_equals)
