add or_multiple into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(left)
 export(len)
 export(mid)
 export(numUpperCase)
+export(or_multiple)
 export(replaceStr)
 export(right)
 export(splitStr)
