add df_as_character into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(comboLogi_to_rs)
 export(date_diff)
 export(datetime_diff)
 export(df_antiJoin_bySameColNames)
+export(df_as_character)
 export(df_col2sqlFieldString)
 export(df_columnName)
 export(df_columnType)
