--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(addrPhoneExtractor)
 export(as.date)
 export(as.datetime)
 export(comboLogi_to_rs)
+export(date_add)
 export(date_diff)
+export(date_minus)
 export(datetime_diff)
 export(df_antiJoin_bySameColNames)
 export(df_as_character)
