add the listAsDF func into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(df_orderData)
 export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
 export(df_rowColEx)
+export(df_rowRepMulti)
 export(df_selectCol)
 export(df_setdiff)
 export(df_summarise_allCols_oneFun)
@@ -56,6 +57,9 @@ export(is.odd)
 export(is_all_true)
 export(left)
 export(len)
+export(listAsDF)
+export(listAsDF_cols)
+export(listAsDF_rows)
 export(mid)
 export(numUpperCase)
 export(or_multiple)
