--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
 export(df_rowColEx)
 export(df_rowRepMulti)
+export(df_rowRepMultiByDate)
 export(df_selectCol)
 export(df_setdiff)
 export(df_summarise_allCols_oneFun)
@@ -64,7 +65,9 @@ export(mid)
 export(numUpperCase)
 export(or_multiple)
 export(replaceStr)
+export(replaceValue_lessThan_target)
 export(right)
+export(round_time)
 export(splitStr)
 export(str_contain)
 export(str_contains)
