add the list_init into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(len)
 export(listAsDF)
 export(listAsDF_cols)
 export(listAsDF_rows)
+export(list_init)
 export(mid)
 export(numUpperCase)
 export(or_multiple)
