add the AceEditor funcs into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
 export(df_summarise_cols_oneFun)
 export(df_union)
+export(editor_char)
 export(equal_to_rs)
 export(getPhoneNumber)
 export(hms)
@@ -69,6 +70,8 @@ export(replaceStr)
 export(replaceValue_lessThan_target)
 export(right)
 export(round_time)
+export(segList)
+export(segList2Vec)
 export(splitStr)
 export(str_contain)
 export(str_contains)
