add the vect_as_list into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(subsetStr)
 export(tbl_as_df)
 export(timeDiff)
 export(value_if_na)
+export(vect_as_list)
 import(dplyr)
 import(hms)
 import(readxl)
