--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(len)
 export(listAsDF)
 export(listAsDF_cols)
 export(listAsDF_rows)
+export(list_as_vect)
 export(list_init)
 export(mid)
 export(numUpperCase)
