--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,7 +86,9 @@ export(subsetStr)
 export(tbl_as_df)
 export(timeDiff)
 export(value_if_na)
+export(vect_as_dbl_equal)
 export(vect_as_list)
+export(vect_as_long_string)
 import(dplyr)
 import(hms)
 import(readxl)
