--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,12 @@ export(value_if_na)
 export(vect_as_dbl_equal)
 export(vect_as_list)
 export(vect_as_long_string)
+export(vector_col_del)
+export(vector_col_dels)
+export(vector_del_leftBrace)
+export(vector_del_rightBrace)
+export(vector_del_space)
+export(word_col_del)
 import(dplyr)
 import(hms)
 import(readxl)
