--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(R_expr)
 export(addrPhoneExtractor)
 export(as.date)
 export(as.datetime)
+export(combine_rows_into_longColumn)
 export(comboLogi_to_rs)
 export(date_add)
 export(date_diff)
@@ -71,6 +72,10 @@ export(replaceStr)
 export(replaceValue_lessThan_target)
 export(right)
 export(round_time)
+export(row_del_byKeys_is)
+export(row_del_byKeys_like)
+export(row_del_byNum)
+export(row_del_byNumChars)
 export(segList)
 export(segList2Vec)
 export(splitStr)
