add the na_values func into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ export(listAsDF_rows)
 export(list_as_vect)
 export(list_init)
 export(mid)
+export(na_value)
+export(na_values)
 export(numUpperCase)
 export(or_multiple)
 export(replaceStr)
@@ -99,6 +101,7 @@ export(vector_col_dels)
 export(vector_del_leftBrace)
 export(vector_del_rightBrace)
 export(vector_del_space)
+export(vector_not_in)
 export(word_col_del)
 import(dplyr)
 import(hms)
