add the paing_setting func into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(na_value)
 export(na_values)
 export(numUpperCase)
 export(or_multiple)
+export(paging_setting)
 export(replaceStr)
 export(replaceValue_lessThan_target)
 export(right)
