add the file into page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(df_leftJoin_byDiffColNames)
 export(df_leftJoin_bySameColNames)
 export(df_mergeColumn)
 export(df_orderData)
+export(df_paging)
 export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
 export(df_rowColEx)
