add the sql paste into tsdo.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(row_del_byNumChars)
 export(segList)
 export(segList2Vec)
 export(splitStr)
+export(sql_paste)
 export(str_contain)
 export(str_contains)
 export(str_copyPrevRow)
