update the files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(df_orderData)
 export(df_paging)
 export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
+export(df_row2Col)
 export(df_rowColEx)
 export(df_rowRepMulti)
 export(df_rowRepMultiByDate)
