add the text_prod,text_dcast funcs into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,8 @@ export(str_splitByRighttBrace)
 export(str_splitCols)
 export(subsetStr)
 export(tbl_as_df)
+export(text_dcast)
+export(text_prod)
 export(timeDiff)
 export(value_if_na)
 export(vect_as_dbl_equal)
