--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,9 @@ export(RGB2CMYK)
 export(RGB2Hex)
 export(R_exec)
 export(R_expr)
-export(addrPhoneExtractor)
 export(as.date)
 export(as.datetime)
+export(book_tidy)
 export(combine_rows_into_longColumn)
 export(comboLogi_to_rs)
 export(date_add)
@@ -70,6 +70,7 @@ export(list_init)
 export(mid)
 export(na_value)
 export(na_values)
+export(ngram_count)
 export(numUpperCase)
 export(or_multiple)
 export(paging_setting)
@@ -109,8 +110,14 @@ export(vector_del_rightBrace)
 export(vector_del_space)
 export(vector_not_in)
 export(word_col_del)
+export(word_count_plot)
+export(word_count_plot_cloud)
+export(word_count_tidy)
+export(word_ngram)
 import(dplyr)
+import(ggplot2)
 import(hms)
-import(readxl)
 import(stringr)
+import(tidytext)
+import(wordcloud)
 importFrom(magrittr,"%>%")
