update the files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(RGB2CMYK)
 export(RGB2Hex)
 export(R_exec)
 export(R_expr)
+export(allocate)
 export(as.date)
 export(as.datetime)
 export(book_tidy)
