--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(df_rowColEx)
 export(df_rowRepMulti)
 export(df_rowRepMultiByDate)
 export(df_selectCol)
+export(df_setColCaption)
 export(df_setdiff)
 export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
