add the df_setList_char()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(df_rowRepMulti)
 export(df_rowRepMultiByDate)
 export(df_selectCol)
 export(df_setColCaption)
+export(df_setList_char)
 export(df_setdiff)
 export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
