add str_suffix_complete function into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(str_equals)
 export(str_splitByLeftBrace)
 export(str_splitByRighttBrace)
 export(str_splitCols)
+export(str_suffix_complete)
 export(subsetStr)
 export(tbl_as_df)
 export(text_dcast)
