add download func into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
 export(df_summarise_cols_oneFun)
 export(df_union)
+export(download)
 export(editor_char)
 export(equal_to_rs)
 export(getPhoneNumber)
