--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(segList)
 export(segList2Vec)
 export(splitStr)
 export(sql_paste)
+export(str_add)
 export(str_contain)
 export(str_contains)
 export(str_copyPrevRow)
