add na_replacement into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(listAsDF_rows)
 export(list_as_vect)
 export(list_init)
 export(mid)
+export(na_replace)
 export(na_value)
 export(na_values)
 export(numUpperCase)
