add df_addCol into tsdo and upgrade into v2.1.4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(date_add)
 export(date_diff)
 export(date_minus)
 export(datetime_diff)
+export(df_addCol)
 export(df_antiJoin_bySameColNames)
 export(df_as_character)
 export(df_col2sqlFieldString)
