--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(datetime_diff)
 export(df_addCol)
 export(df_antiJoin_bySameColNames)
 export(df_as_character)
+export(df_as_groupList)
 export(df_col2sqlFieldString)
 export(df_columnName)
 export(df_columnType)
