upgrade into v2.1.7 and add nse into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,15 @@ export(mid)
 export(na_replace)
 export(na_value)
 export(na_values)
+export(nse_dots)
+export(nse_input)
+export(nse_input_str)
+export(nse_scramble)
+export(nse_subScramble)
+export(nse_subset)
+export(nse_subset_q)
+export(nse_substitute)
+export(nse_xyplot)
 export(numUpperCase)
 export(or_multiple)
 export(paging_setting)
@@ -119,5 +128,6 @@ export(vector_not_in)
 export(word_col_del)
 import(dplyr)
 import(hms)
+import(pryr)
 import(stringr)
 importFrom(magrittr,"%>%")
