--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,18 @@ export(df_summarise_cols_oneFun)
 export(df_union)
 export(download)
 export(editor_char)
+export(env_base)
+export(env_create)
+export(env_current)
+export(env_empty)
+export(env_global)
+export(env_ls)
+export(env_lsStr)
+export(env_new)
+export(env_parent)
+export(env_root)
+export(env_searchPath)
+export(envs_are_identical)
 export(equal_to_rs)
 export(getPhoneNumber)
 export(hms)
