--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,9 @@ export(env_root)
 export(env_searchPath)
 export(envs_are_identical)
 export(equal_to_rs)
+export(getDate)
 export(getPhoneNumber)
+export(getTime)
 export(hms)
 export(ifnull)
 export(is.Am)
