add second_as_Timetext into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(row_del_byKeys_is)
 export(row_del_byKeys_like)
 export(row_del_byNum)
 export(row_del_byNumChars)
+export(seconds_as_Timetext)
 export(segList)
 export(segList2Vec)
 export(splitStr)
@@ -129,6 +130,7 @@ export(tbl_as_df)
 export(text_dcast)
 export(text_prod)
 export(timeDiff)
+export(time_formatter)
 export(value_if_na)
 export(vect_as_dbl_equal)
 export(vect_as_list)
