--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,10 +115,12 @@ export(segList)
 export(segList2Vec)
 export(splitStr)
 export(sql_paste)
+export(str_HasDateTime)
 export(str_add)
 export(str_contain)
 export(str_contains)
 export(str_copyPrevRow)
+export(str_delRows)
 export(str_equal)
 export(str_equals)
 export(str_splitByLeftBrace)
