--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(df_as_groupList)
 export(df_col2sqlFieldString)
 export(df_columnName)
 export(df_columnType)
+export(df_combineRows)
 export(df_count)
 export(df_filter)
 export(df_fullJoin_byDiffColNames)
@@ -47,6 +48,7 @@ export(df_selectCol)
 export(df_setColCaption)
 export(df_setList_char)
 export(df_setdiff)
+export(df_splitByCol)
 export(df_summarise_allCols_oneFun)
 export(df_summarise_cols_funs)
 export(df_summarise_cols_oneFun)
@@ -123,6 +125,9 @@ export(str_copyPrevRow)
 export(str_delRows)
 export(str_equal)
 export(str_equals)
+export(str_extractDate)
+export(str_extractDateTime)
+export(str_extractTime)
 export(str_splitByLeftBrace)
 export(str_splitByRighttBrace)
 export(str_splitCols)
