--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(df_rowRepMulti)
 export(df_rowRepMultiByDate)
 export(df_selectCol)
 export(df_setColCaption)
+export(df_setLabel)
 export(df_setList_char)
 export(df_setdiff)
 export(df_splitByCol)
