add df_right into tsdo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(df_leftJoin_bySameColNames)
 export(df_mergeColumn)
 export(df_orderData)
 export(df_paging)
+export(df_right)
 export(df_rightJoin_byDiffColNames)
 export(df_rightJoin_bySameColNames)
 export(df_row2Col)
