add df_balcklist_tagiing function and upgrade into v3.0.3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(df_addCol)
 export(df_antiJoin_bySameColNames)
 export(df_as_character)
 export(df_as_groupList)
+export(df_blackList_tagging)
 export(df_col2sqlFieldString)
 export(df_columnName)
 export(df_columnType)
@@ -123,6 +124,18 @@ export(sql_paste)
 export(str_HasDateTime)
 export(str_add)
 export(str_contain)
+export(str_contain_ask)
+export(str_contain_ask2)
+export(str_contain_ask3)
+export(str_contain_blank)
+export(str_contain_card)
+export(str_contain_emoji)
+export(str_contain_emotion)
+export(str_contain_http)
+export(str_contain_num)
+export(str_contain_picture)
+export(str_contain_sound)
+export(str_contain_vin)
 export(str_contains)
 export(str_copyPrevRow)
 export(str_delRows)
