add df_log_tagging into v3.04

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(str_contain_emoji)
 export(str_contain_emotion)
 export(str_contain_http)
 export(str_contain_num)
+export(str_contain_phone)
 export(str_contain_picture)
 export(str_contain_sound)
 export(str_contain_vin)
