--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(R_expr)
 export(allocate)
 export(as.date)
 export(as.datetime)
+export(callR)
 export(combine_rows_into_longColumn)
 export(comboLogi_to_rs)
 export(date_add)
