upgrade into 3.0.6 into pkg.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(segList)
 export(segList2Vec)
 export(splitStr)
 export(sql_paste)
+export(sql_str)
 export(str_HasDateTime)
 export(str_add)
 export(str_contain)
