--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(nse_subset_q)
 export(nse_substitute)
 export(nse_xyplot)
 export(numUpperCase)
+export(num_to_string_AcctFormat)
 export(or_multiple)
 export(paging_setting)
 export(replaceStr)
@@ -151,6 +152,7 @@ export(str_splitByLeftBrace)
 export(str_splitByRighttBrace)
 export(str_splitCols)
 export(str_suffix_complete)
+export(string_acctFormat_to_num)
 export(subsetStr)
 export(tbl_as_df)
 export(text_dcast)
